# RTSum

./: .gitignore  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  web.py  weben.py
data/: .gitignore
data/cnn/: article.txt  summary.txt  triple.txt
data/reddit/: reddit_test_article.txt  reddit_test_summary.txt  reddit_train_article.txt  reddit_train_summary.txt  reddit_validation_article.txt  reddit_validation_summary.txt
sjyyj/: abstract.py  dataset.py  extract.py  openie.py  rank.py  rtsum.py  summary.py  train.py
src/: abstract.py  bart-train.ipynb  extract.py  rank.py  summary.py  train.py  train_example.ipynb  train_reddit.ipynb
web/: chaten.py  chatko.py  service.py  simple.py
