[project]
authors = [
  {name = "seonglae", email = "sungle3737@gmail.com"},
]
dependencies = ["fire~=0.5.0", "pyopenie~=0.2.0", "mypy~=1.2.0", "transformers~=4.28.1", "sentence-transformers~=2.2.2", "datasets~=2.12.0", "evaluate~=0.4.0"]
description = "SJYYJ pipeline repository"
license = {text = "MIT"}
name = "sjyyj"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = ["autopep8~=2.0.2"]
managed = True

[tool.autopep8]
intent-size = 2

[tool.mypy]
ignore_missing_imports = True
