[project]
authors = [
  {name = "seonglae", email = "sungle3737@gmail.com"},
]
dependencies = [
    "fire~=0.5.0",
    "transformers~=4.28.1",
    "sentence-transformers~=2.2.2",
    "datasets~=2.12.0",
    "evaluate~=0.4.0",
    "streamlit~=1.22.0",
    "streamlit-chat~=0.0.2.2",
    "python-dotenv~=1.0.0",
    "spacy~=3.5.3",
    "autopep8~=2.0.2",
    "pip~=23.1.2",
    "rouge-score~=0.1.2",
    "torch==2.0.1",
]
description = "SJYYJ pipeline repository"
license = {text = "MIT"}
name = "sjyyj"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
managed = true
dev-dependencies = [
    "autopep8~=2.0.2",
    "pip~=23.1.2",
    "mypy~=1.3.0",
    "setuptools~=68.0.0",
]

[tool.autopep8]
intent-size = 2

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true

[[tool.rye.sources]]
name = "cuda"
url = "https://download.pytorch.org/whl/cu118"
type = "index"
